Fri Apr 13 16:11:05 2001  Loic Dachary  <loic@fsffrance>

	* fr/server/sysadmin-france.texi: System administration information
	  for GNU and FSF machines located in France.

Fri Apr 13 16:00:52 2001  Loic Dachary  <loic@gnu.org>

	* fsfe/fr/birth: Add birth act of france.fsfeurope.org

Fri Apr 13 14:40:42 2001  Loic Dachary  <loic@senga.org>

	* drafts/patrick.hutton: add draft from patrick.hutton@idealx.com

Fri Apr 13 14:35:41 2001  Loic Dachary  <loic@senga.org>

	* drafts: Add the draft directory for unpublished documents
	  that must be considered as work in progress.

2001-03-22 Axel von Arnim <vonarnim@club-internet.fr>
        * minor corrections in siae/siae.fr.html and
          documents/doi.fr.html
        * made footer identical in both pages

2001-03-21  Frederic Couchet  <fcouchet@april.org>

	* corrections in siae/siae.fr.html

2001-03-20 Ludovic Penet <ludovicpenet@europe.com>
        * Translated siae in French

2001-03-19 Axel von Arnim <vonarnim@club-internet.fr>
        * French homepage and DOI: corrections

2001-03-17 Axel von Arnim <vonarnim@club-internet.fr>
        * Translated homepage and DOI in French

2001-03-15 Bernhard
	* reworked index.html page, as example.

2001-03-06  Georg C. F. Greve  <greve@gnu.org>

	* events/: moved file to FSFE repository to have this one
	dedicated for web-tasks only.

	* mailman/index.html: added other core team members

2001-03-04 Lutz Horn <lh@lutz-horn.de>

	* Removed DOI from index.html and reworked the entire index page.
	* Linked the siae pages from the index page.

2001-03-03 Lutz Horn <lh@lutz-horn.de>

	* New directory 'documents'. First file is doi.html containing the
	  Declaration of Intent.

2001-03-02 Lutz Horn <lh@lutz-horn.de>

	* Added german translation welcome.de.txt of the welcome text.

2001-03-02  Frederic Couchet  <fcouchet@april.org>

	* volunteers/webmasters.en.txt : english text for the webmasters

Fri Feb 23 10:02:51 2001  Loic Dachary  <loic@senga.org>
