@@ -1,0 +1,6 @@
+MAKEINFO = makeinfo
+
+all: sysadmin-france.html
+
+sysadmin-france.html: sysadmin-france.texi
+	$(MAKEINFO) --html $<
