@@ -5,8 +5,8 @@
 @setchapternewpage odd
 @c %**end of header
 
-@set RCSID $Id: sysadmin-france.texi,v 1.1 2001-04-13 14:12:28 loic Exp $
-@include version.texi
+@set RCSID $Id: sysadmin-france.texi,v 1.2 2001-04-15 10:15:38 loic Exp $
+@set VERSION 1.0
 
 @c Combine the variable and function indices:
 @syncodeindex vr fn
@@ -17,7 +17,6 @@
 @title System Administration France
 @subtitle Information specific to GNU and FSF machines in France
 @subtitle @code{Sysadmin France} Version @value{VERSION}
-@subtitle @value{UPDATED}
 @author Loic Dachary
 @page
 @vskip 0pt plus 1filll
@@ -47,10 +46,124 @@ in France.
 
 @end ifnottex
 
-@node Introduction, Installation, Top, Top
+@menu
+* Introduction::                
+* Accounts::                    
+* Web::                         
+* Account Management::          
+* Concept Index::               
+
+ --- The Detailed Node Listing ---
+
+Accounts
+
+* Account Create::              
+* Account Access::              
+* Account Update::              
+* Account Delete::              
+* Cron Job::                    
+@end menu
+
+@node Introduction, Accounts, Top, Top
 @chapter Introduction
 
-@node Concept Index,  , System Administration, Top
+System administration information.
+
+@node Accounts, Web, Introduction, Top
+@chapter Accounts
+
+@menu
+* Account Create::              
+* Account Access::              
+* Account Update::              
+* Account Delete::              
+* Cron Job::                    
+@end menu
+
+@node Account Create, Account Access, Accounts, Accounts
+@section Account Create
+
+@cindex shell account
+@cindex fsffr and shell account
+
+The user accounts on @code{france.fsfeurope.org} are managed with
+@uref{http://savannah.gnu.org/,,Savannah}. If someone need a shell
+account on @code{france.fsfeurope.org} he has to get an account on
+@uref{http://savannah.gnu.org/,,Savannah} first. Then he should send
+a mail to one of the project administrators of the 
+@uref{http://savannah.gnu.org/projects/fsffr/,,fsffr} project. The
+project administrator adds him as a member of the 
+@uref{http://savannah.gnu.org/projects/fsffr/,,fsffr} project. Within
+24 hours a cron job on @code{france.fsfeurope.org} will fetch the
+new user from Savannah and create the account. 
+
+@node Account Access, Account Update, Account Create, Accounts
+@section Account Access
+
+@cindex shell account ssh
+@cindex ssh shell account
+@cindex ssh public key
+@cindex password ssh
+@cindex ssh and password 
+Once the account is created, access to the machine is available using
+ssh and a public key. The Savannah password will not work on 
+@code{france.fsfeurope.org}. When logged on 
+@uref{http://savannah.gnu.org/projects/fsffr/,,fsffr} it is possible
+to register one or more public key at 
+@uref{http://savannah.gnu.org/account/editsshkeys.php,,Edit SSH Keys}. 
+
+@node Account Update, Account Delete, Account Access, Accounts
+@section Account Update
+
+@cindex public key update
+@cindex ssh public key update
+Once a day the ssh public keys of every account on
+@code{france.fsfeurope.org} are updated from the information fetched on
+Savannah. If the @file{authorized_keys} file of a user is manualy updated,
+it will be overwritten. 
+
+@node Account Delete, Cron Job, Account Update, Accounts
+@section Account Delete
+
+When a user is not listed anymore in the 
+@uref{http://savannah.gnu.org/projects/fsffr/,,fsffr}, its account is
+disabled on @code{france.fsfeurope.org}. The home directory is not 
+deleted and if the user is added again at a later time, he will retrieve
+his former home directory. 
+
+@node Cron Job,  , Account Delete, Accounts
+@section Cron Job
+
+The @file{/usr/local/bin/savannah_users} script does the update. It
+is run from the @file{/etc/cron.d/savannah_users} cron file and spits
+log information in @file{/var/log/savannah_users.log}. The log file
+is rotated according to the @file{/etc/logrotate.d/savannah_users}
+specification.
+
+Savannah does not serve account information anonymously. The 
+@code{france.fsfeurope.org} machine is explicitly allowed to retrieve
+the relevant information in XML. For more information check the
+@uref{http://savannah.gnu.org/savannah.html#Account%20Management,,Account Management} chapter of the Savannah documentation.
+
+@node Web, Account Management, Accounts, Top
+@chapter Web
+
+The @code{www} user owns the web directory. The document root is 
+@file{/var/www/} that is a link to @file{/home/www/fsfe/fr}. The web
+site itself is an anonymous checkout of the @file{fr} directory of the
+@uref{http://www.fsfeurope.org/,,FSF Europe} HTML repository. 
+
+All users registered in the
+@uref{http://savannah.gnu.org/projects/fsfe/,,FSF Europe} project can
+edit the HTML repository using CVS/SSH.
+
+The checkout is updated every hour by the @code{www} user crontab. 
+
+@node Account Management, Concept Index, Web, Top
+@chapter Account Management
+
+
+@node Concept Index,  , Account Management, Top
 @unnumbered Index of Concepts
 
 @printindex cp
