@@ -1,4 +1,12 @@
-Fri Apr 13 16:11:05 2001  Loic Dachary  <loic@fsffrance>
+Sun Apr 15 12:05:14 2001  Loic Dachary <loic@gnu.org>
+
+	* fr/server/sysadmin-france.texi: Account Management chapter
+
+	* fr/server/sysadmin-france.html: Add HTML format
+
+	* fr/server/Makefile: Generate HTML format
+
+Fri Apr 13 16:11:05 2001  Loic Dachary  <loic@gnu.org>
 
 	* fr/server/sysadmin-france.texi: System administration information
 	  for GNU and FSF machines located in France.
